--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h4>Static Website Builders</h4>
         <b><span style="color: grey;">Drag and Drop Static Website Builders Frameworks &
                 Generators</span></b>
+        <span style="float: right; font-size:16px; margin-top:-15px"><u>Become Affliate</u> </span>
     </div>
     <div class="container-area">
         <div class="container top">
