--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,16 @@
 
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black; font-size:large">
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: black; font-size:large">
 
-        <a class="navbar-brand" href="#">
-            <img src="./images/logo-icon.png" alt="logo" style="height: 30px; width:auto"></a>
+    <a class="navbar-brand" href="#">
+        <img src="./images/logo-icon.png" alt="logo" style="height: 30px; width:auto">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-2">
             <li class="nav-item mx-3">
                 <a href="" class="nav-link">Categories</a>
@@ -44,90 +49,152 @@
                 <a href="" class="nav-link">Sign In</a>
             </li>
         </ul>
-    </nav>
-    <div class="header">
-        <h4>Static Website Builders</h4>
-        <b><span style="color: grey;">Drag and Drop Static Website Builders Frameworks &
-                Generators</span></b>
-        <span style="float: right; font-size:16px; margin-top:-15px"><u>Become Affliate</u> </span>
     </div>
-    <div class="container-area">
-        <div class="container top">
 
-            <div style="width: 40%">
-                <b style="font-size: 30px;">slides</b>
-                <br>
-                <h1>Static Website Generator.</h1>
-                <div class="p">We make it impossible to create ugly websites.</div>
-                <button class="btn">
-                    View More &nbsp;>
-                </button>
+
+</nav>
+
+<body>
+
+    <div class="container-fluid-md pt-4 pb-4 " style="margin-left:13vw;margin-right:13vw;">
+        <div class="row">
+            <div class="col-md-8 my-3 d-flex justify-content-start align-items-center">
+                <div>
+                    <h4>Static Website Builders</h4>
+                    <b><span style="color: grey;">Drag and Drop Static Website Builders Frameworks &
+                            Generators</span></b>
+                </div>
+
+            </div>
+            <div class="col-md-4 d-flex justify-content-md-end justify-content-xs-start align-items-center">
+                <span><u>Become Affliate</u></span>
             </div>
         </div>
-        <div class="middle-section" style="display: flex;">
-            <div class="container mid mid-left" style="margin-left: 0; ">
-                <div>
-                    <span style="font-size: 30px; letter-spacing: 4px; font-weight: 600">QARDS</span>
-                    <br>
-                    <h1>WordPress Plugin.</h1>
-                    <div class="p" style="width:70%">You focus on content, the purpose of your website and
-                        the story you want to tell. Leave the
-                        rest&nbsp;to&nbsp;us.</div>
-                    <button class="btn">
-                        View More &nbsp;>
-                    </button>
-                </div>
-            </div>
-            <div class="container mid mid-right" style="margin-right: 0;">
-                <div>
-                    <b style="font-size: 30px;">Startup Framework</b>
-                    <br>
-                    <h1>Suit Up Your Startup.</h1>
-                    <div class="p" style="width:70%">A high-quality solution for
-                        those
-                        who
-                        want a
-                        beautiful startup&nbsp;website&nbsp;quickly.
+    </div>
+
+    <div style="margin-left:13vw;margin-right:13vw;">
+        <div class="row">
+            <div class="col-12 mb-2">
+                <div class="container-fluid p-5 d-flex justify-content-start align-items-center" style="background-image: url('./images/custom\ –\ 1.png');
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                            border-radius: 5px;
+                            height: 55vh">
+
+                    <div class="col-md-4 col-xs-12">
+                        <b style="font-size: 30px;">slides</b>
+                        <br>
+                        <h1 class="my-3" style="font-size: 48px;">Static Website Generator.</h1>
+                        <div class="p col-md-12 p-0">We make it impossible to create ugly websites.</div>
+                        <button class="btn mt-4">
+                            View More &nbsp;>
+                        </button>
                     </div>
-                    <button class="btn">
-                        View More &nbsp;>
-                    </button>
                 </div>
             </div>
         </div>
-        <div class="container bottom" style="margin-top:5px">
-            <div style="width: 40%; padding-top: 20px">
-                <b style="font-size: 30px;">Flat UI <img src="./images/icon-flat.png" alt=""> </b>
-                <span style="font-size: 30px;">Pro</span> <br>
-                <h1>Bootstrap Framework.</h1>
-                <div class="p" style="color: rgba(255, 255, 255, 0.8); font-size:18px">Flat UI Pro is made on the basis
-                    of Twitter
-                    Bootstrap in a stunning flat-style.</div>
-                <button class="btn">
-                    View More &nbsp;>
-                </button>
+        <div class="row">
+            <div class="col-lg-6 col-xs-12">
+                <div class="container-fluid p-5 my-3 d-flex justify-content-start align-items-top " style="
+                background-image: linear-gradient(to right bottom, #060847, #121c5e, #1d2f75, #27438d, #3158a5, #2d6eb7, #3085c8, #3b9bd6, #57b5dd, #7ecee3, #a8e6eb, #d4fcf8);
+                            border-radius: 5px;
+                            height: 55vh">
+                    <div>
+                        <span style="font-size: 30px; letter-spacing: 4px; font-weight: 600">QARDS</span>
+                        <h1 class="my-3" style="font-size:48px">WordPress Plugin.</h1>
+                        <div class="p col-md-9 p-0 col-xs-12">You focus on content, the purpose of your website and
+                            the story you want to tell. Leave the
+                            rest&nbsp;to&nbsp;us.</div>
+                        <button class="btn mt-4">
+                            View More &nbsp;>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xs-12">
+                <div class="container-fluid my-3 p-5 d-flex justify-content-start align-items-top" style="
+                            background-image: url(./images/startup-bg.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                            border-radius: 5px;
+                            height: 55vh">
+                    <div>
+                        <span style="font-size: 30px; font-weight: 600">Startup Framework</span>
+                        <h1 class="my-3" style="font-size:48px">Suit Up Your Startup.</h1>
+                        <div class="p col-md-9 p-0 col-xs-12">A high-quality solution for
+                            those
+                            who
+                            want a
+                            beautiful startup&nbsp;website&nbsp;quickly.</div>
+                        <button class="btn mt-4">
+                            View More &nbsp;>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="bottom-message">
-            150 000+ Customers love Designmodo products.
+        <div class="row">
+            <div class="col-12 mb-2">
+                <div class="container-fluid p-5 d-flex justify-content-start align-items-center" style="background-image: url('./images/custom\ -\ 2.png');
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                            border-radius: 5px;
+                            height: 55vh">
+
+                    <div class="col-md-6 col-xs-12">
+                        <b style="font-size: 30px;">Flat UI <img src="./images/icon-flat.png" style="height:25px"
+                                alt=""> </b>
+                        <span style="font-size: 30px;">Pro</span> <br>
+                        <br>
+                        <h1 style="font-size:48px">Bootstrap Framework.</h1>
+                        <div class="p col-md-9 p-0">Flat UI Pro is made on the basis
+                            of Twitter
+                            Bootstrap in a stunning flat-style.</div>
+                        <button class="btn mt-4">
+                            View More &nbsp;>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 ">
+                <div class="container-fluid d-flex justify-content-center align-items-center py-5" style="font-size: 20px;
+    color: rgba(255, 255, 255, 0.7);"> 150 000+ Customers
+                    love
+                    Designmodo products.</div>
+            </div>
         </div>
     </div>
-    <div class="footer">
 
-        <span style="color: gray;">
-            Copyright © 2017 Designmodo. All Rights Reserved.
-        </span>
-        <ul class="list-unstyled">
-            <li> <a href="">Contact Us</a> </li>
-            <li> <a href="">About</a> </li>
-            <li> <a href="">Privacy</a> </li>
-            <li> <a href="">Terms</a> </li>
-            <li> <a href="">Advertise</a> </li>
-            <li> <a href="">Affiliates</a> </li>
-            <li> <a href="">Newsletter</a> </li>
-        </ul>
-
+    <div class="container-fluid">
+        <hr style="background-color: gray; height:1px;margin-top:0px;margin-left:12vw;margin-right:12vw;">
     </div>
+
+    <div style="margin-left:13vw;margin-right:13vw;">
+        <div class="row pb-3">
+            <div class="col-lg-4 col-xs-12 d-flex align-items-center">
+                <span style="color: gray;">
+                    Copyright © 2017 Designmodo. All Rights Reserved.
+                </span></div>
+            <div class="col-lg-8 col-xs-12">
+                <ul class="list-unstyled d-md-flex p-3 justify-content-end footer-end">
+                    <li> <a href="">Contact Us</a> </li>
+                    <li> <a href="">About</a> </li>
+                    <li> <a href="">Privacy</a> </li>
+                    <li> <a href="">Terms</a> </li>
+                    <li> <a href="">Advertise</a> </li>
+                    <li> <a href="">Affiliates</a> </li>
+                    <li> <a href="">Newsletter</a> </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
 
