--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="row">
             <div class="col-12 mb-2">
-                <div class="container-fluid p-5 d-flex justify-content-start align-items-center" style="background-image: url('./images/custom\ -\ 2.png');
+                <div class="container-fluid p-5 mt-2 d-flex justify-content-start align-items-center" style="background-image: url('./images/custom\ -\ 2.png');
                             background-position: center;
                             background-repeat: no-repeat;
                             background-size: cover;
